style.css
html, body {
  height: 100%;
  margin: 0;
}

body {
  font-family: "Manrope", sans-serif;
  color: hsl(217, 19%, 35%);
  background-color: hsl(210, 46%, 95%);
  display: flex;
  font-size: 13px;
  font-weight: 500;
}

main {
  margin: 6em auto auto auto;
  background-color: #FFFFFF;
  display: flex;
  flex-direction: column;
  width: 85%;
  border-radius: 12px;
  overflow: hidden;
}

/* main image */
#drawers {
  margin-top: -1em;
}

/* both blocks of text */
#text {
  background-color: #FFFFFF;
  margin: -3.4em 0 0 0;
  padding: 0 0 2em 1.75em;
  border-radius: 0 0 10px 10px;
} 

/* 'shift the overall look...' */
#shift {
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.2px;
  font-weight: 700;
  margin: 2em 0 1em 0;
  width: 263px;
}

/* 'Ever been in a room...'*/
p {
  width: 89%;
  line-height: 20px;
  letter-spacing: .12px;
  font-weight: 200;
  font-size: 13px;
}

/* 'Michelle Appleton' */
h4 {
  display: inline-flex;
  font-weight: 700;
  font-size: 13px;
  line-height: 20px;
  letter-spacing: .12px;
  padding: 0 1em 0 1em;
  margin: 0;
}

/* date */
h5 {
  margin: 0 0 0 1em;
  padding: 0;
  color: #9DAEC2;
  font-size: 13px;
  line-height: 20px;
  letter-spacing: .12px;
  font-weight: 200;
}

/* section holding the avatar, name, date, and share arrow */
#author {
  display: flex;
  margin: 2em 0 0 0;
}

/* Michelle's avatar img */
#michelle {
  border-radius: 50%;
  width: 40px;
  height: 40px;
}

/* share arrow */
#arrow {
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background: #ECF2F8;
  margin: 0 0 0 3.75em;
  cursor: pointer;
}

.attribution {
  display: none;
}

